--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -3,6 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
+    android:id="@+id/item_view__cv"
     android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="250dp"
@@ -13,8 +15,6 @@
         android:id="@+id/item_view__iv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         android:adjustViewBounds="true"/>
 
 </androidx.cardview.widget.CardView>
